# GEO_EWU

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  promp_app.txt
apps/api/: README.md  pyproject.toml
apps/api/src/geosector_api/: __init__.py  config.py  convex_client.py  geocoding.py  main.py  models.py  osm_client.py
apps/api/src/geosector_api/deduplication/: __init__.py
apps/api/src/geosector_api/jobs/: __init__.py  service.py
apps/api/src/geosector_api/logging/: __init__.py
apps/api/src/geosector_api/normalizers/: __init__.py
apps/api/src/geosector_api/sources/: __init__.py  base.py  future_directories.py  future_foursquare.py  future_web.py  future_yelp.py  osm.py  registry.py
apps/api/tests/: test_deduplication.py  test_job_service.py  test_normalizers.py  test_osm_client.py
apps/web/: eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: styles.css
apps/web/src/components/: AppShell.tsx  BusinessCard.tsx  BusinessDetail.tsx  GlobeViewport.tsx  LocationSearchBar.tsx  MetricBadge.tsx  ModeToggle.tsx  OperationPanel.tsx  ResultsPanel.tsx  SectorSelector.tsx  StatusConsole.tsx
apps/web/src/hooks/: useDebouncedValue.ts
apps/web/src/lib/: api.ts  export.ts  geo.ts  mockData.ts
convex/: README.md  businesses.ts  jobs.ts  locations.ts  logs.ts  schema.ts  sectors.ts  seed.ts  sourceRuns.ts
docker/: api.Dockerfile  web.Dockerfile
docs/: architecture.md  phases-3-5.md  phases-6-8.md  phases-9-15.md
(+1 files in other folders)
